--- a/style.css
+++ b/style.css
@@ -3,6 +3,11 @@
 	padding: 0;
 	box-sizing: border-box;
 }
+
+.container{
+	display: flex;
+}
+
 .grid{
 	width: 200px;
 	height: 400px;
@@ -18,4 +23,18 @@
 
 .tetromino{
 	background-color: blue;
+}
+
+.mini-grid {
+	margin-left: 50px;
+	width: 80px;
+	height: 80px;
+	display: flex;
+	flex-wrap: wrap;
+	background-color: yellow;
+}
+
+.mini-grid div{
+	height: 20px;
+	width: 20px;
 }
